--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz-frontend",
   "version": "0.1.0",
   "homepage": "https://muc-java-22-1.github.io/",
+  "proxy": "https://quizzable.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
